--- a/examples/sense_of_humor/sense_of_humor.ipynb
+++ b/examples/sense_of_humor/sense_of_humor.ipynb
@@ -285,255 +285,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "we can inspect the history to see what happened"
+    "optionally, we can inspect the history to see what happened. change n to go back further in the llm history."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Given the fields `query`, produce the fields `joke`.\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Follow the following format.\n",
-      "\n",
-      "Query: ${query}\n",
-      "Reasoning: Let's think step by step in order to ${produce the joke}. We ...\n",
-      "Joke: ${joke}\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to Reasoning: Let's think step by step in order to produce the joke. We know that baby animals are often seen as cute and endearing, so a joke involving them should play on their innocence and charm. Additionally, using a common scenario or play on words can make the joke more relatable and funny.\n",
-      "Joke: Why did the baby lion always get lost? Because he couldn't stop \"lion\" around!\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to Query: jokes about baby animals Reasoning: Let's think step by step in order to produce the joke. We should consider a common characteristic or behavior of baby animals that can be humorously exaggerated or word-play that is easy to understand.\n",
-      "Joke: Why did the baby elephant bring a suitcase to the zoo? Because it wanted to pack its trunk!\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to Query: jokes about baby animals Reasoning: Let's think step by step in order to produce the joke. We can start by considering characteristics or behaviors of baby animals that are endearing or amusing. For example, baby animals are often cute, clumsy, curious, and have unique names that can be used cleverly in wordplay. By combining these traits, we can create a lighthearted and funny joke.\n",
-      "Joke: Why did the baby kangaroo get in trouble at school? Because he couldn't stop jumping to conclusions!\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to Query: jokes about baby animals Reasoning: Let's think step by step in order to produce the joke. We need to consider the characteristics and behaviors of baby animals that might be endearing or funny. Baby animals are often associated with cuteness, innocence, clumsiness, and playful antics. We can play on these traits to create a humorous scenario or a witty remark.\n",
-      "Joke: Why don't baby ducks tell jokes? Because they always crack up!\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to\u001b[32m produce the joke. Baby animals are often adorable and exhibit behaviors that can be amusing and endearing. To create a joke, we can focus on a specific baby animal and use a play on words or a humorous scenario that highlights these qualities.\n",
-      "\n",
-      "Joke: Why did the baby giraffe bring a ladder to school? Because it wanted to reach new heights!\u001b[0m\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Given the fields `query`, produce the fields `joke`.\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Follow the following format.\n",
-      "\n",
-      "Query: ${query}\n",
-      "Reasoning: Let's think step by step in order to ${produce the joke}. We ...\n",
-      "Joke: ${joke}\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to Query: jokes about baby animals Reasoning: Let's think step by step in order to produce the joke. We need to consider baby animals that people commonly find cute or endearing, such as kittens, puppies, or ducklings. Next, we need to incorporate a playful or humorous twist that reflects the innocence and charm of baby animals.\n",
-      "Joke: Why did the baby kitten bring a pencil to bed? Because it wanted to draw some purr-fect dreams!\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to Reasoning: Let's think step by step in order to produce the joke. We know that baby animals are often seen as cute and endearing, so a joke involving them should play on their innocence and charm. Additionally, using a common scenario or play on words can make the joke more relatable and funny.\n",
-      "Joke: Why did the baby lion always get lost? Because he couldn't stop \"lion\" around!\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to Query: jokes about baby animals Reasoning: Let's think step by step in order to produce the joke. We can start by considering characteristics or behaviors of baby animals that are endearing or amusing. For example, baby animals are often cute, clumsy, curious, and have unique names that can be used cleverly in wordplay. By combining these traits, we can create a lighthearted and funny joke.\n",
-      "Joke: Why did the baby kangaroo get in trouble at school? Because he couldn't stop jumping to conclusions!\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to Query: jokes about baby animals Reasoning: Let's think step by step in order to produce the joke. We need to consider the characteristics and behaviors of baby animals that might be endearing or funny. Baby animals are often associated with cuteness, innocence, clumsiness, and playful antics. We can play on these traits to create a humorous scenario or a witty remark.\n",
-      "Joke: Why don't baby ducks tell jokes? Because they always crack up!\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to\u001b[32m produce the joke. We need to consider the various traits and common behaviors of baby animals that people find amusing or adorable. Often, baby animals are associated with playfulness, innocence, and adorable clumsiness. By using these attributes, we can create a joke that is both relatable and humorous.\n",
-      "Joke: Why did the baby elephant bring a suitcase to the zoo? Because he wanted to pack his trunk!\u001b[0m\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Given the fields `query`, produce the fields `joke`.\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Follow the following format.\n",
-      "\n",
-      "Query: ${query}\n",
-      "Reasoning: Let's think step by step in order to ${produce the joke}. We ...\n",
-      "Joke: ${joke}\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to Query: jokes about baby animals Reasoning: Let's think step by step in order to produce the joke. We need to consider baby animals that people commonly find cute or endearing, such as kittens, puppies, or ducklings. Next, we need to incorporate a playful or humorous twist that reflects the innocence and charm of baby animals.\n",
-      "Joke: Why did the baby kitten bring a pencil to bed? Because it wanted to draw some purr-fect dreams!\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to Reasoning: Let's think step by step in order to produce the joke. We know that baby animals are often seen as cute and endearing, so a joke involving them should play on their innocence and charm. Additionally, using a common scenario or play on words can make the joke more relatable and funny.\n",
-      "Joke: Why did the baby lion always get lost? Because he couldn't stop \"lion\" around!\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to Query: jokes about baby animals Reasoning: Let's think step by step in order to produce the joke. We should consider a common characteristic or behavior of baby animals that can be humorously exaggerated or word-play that is easy to understand.\n",
-      "Joke: Why did the baby elephant bring a suitcase to the zoo? Because it wanted to pack its trunk!\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to Query: jokes about baby animals Reasoning: Let's think step by step in order to produce the joke. We need to consider the characteristics and behaviors of baby animals that might be endearing or funny. Baby animals are often associated with cuteness, innocence, clumsiness, and playful antics. We can play on these traits to create a humorous scenario or a witty remark.\n",
-      "Joke: Why don't baby ducks tell jokes? Because they always crack up!\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to\u001b[32m produce the joke. We need to focus on the endearing and often humorous behaviors of baby animals. Baby animals are usually depicted as curious, playful, and sometimes a bit clumsy. Combining these characteristics with a playful twist or a pun can help create a funny and engaging joke.\n",
-      "Joke: Why did the baby giraffe bring a ladder to school? Because it wanted to reach new heights in learning!\u001b[0m\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Given the fields `query`, produce the fields `joke`.\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Follow the following format.\n",
-      "\n",
-      "Query: ${query}\n",
-      "Reasoning: Let's think step by step in order to ${produce the joke}. We ...\n",
-      "Joke: ${joke}\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to Query: jokes about baby animals Reasoning: Let's think step by step in order to produce the joke. We need to consider baby animals that people commonly find cute or endearing, such as kittens, puppies, or ducklings. Next, we need to incorporate a playful or humorous twist that reflects the innocence and charm of baby animals.\n",
-      "Joke: Why did the baby kitten bring a pencil to bed? Because it wanted to draw some purr-fect dreams!\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to Reasoning: Let's think step by step in order to produce the joke. We know that baby animals are often seen as cute and endearing, so a joke involving them should play on their innocence and charm. Additionally, using a common scenario or play on words can make the joke more relatable and funny.\n",
-      "Joke: Why did the baby lion always get lost? Because he couldn't stop \"lion\" around!\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to Query: jokes about baby animals Reasoning: Let's think step by step in order to produce the joke. We should consider a common characteristic or behavior of baby animals that can be humorously exaggerated or word-play that is easy to understand.\n",
-      "Joke: Why did the baby elephant bring a suitcase to the zoo? Because it wanted to pack its trunk!\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to Query: jokes about baby animals Reasoning: Let's think step by step in order to produce the joke. We can start by considering characteristics or behaviors of baby animals that are endearing or amusing. For example, baby animals are often cute, clumsy, curious, and have unique names that can be used cleverly in wordplay. By combining these traits, we can create a lighthearted and funny joke.\n",
-      "Joke: Why did the baby kangaroo get in trouble at school? Because he couldn't stop jumping to conclusions!\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to\u001b[32m produce the joke. We need to think about the characteristics of baby animals that are commonly cute or funny. Traits like being small, clumsy, and curious often come to mind. Additionally, using wordplay or a pun that incorporates these traits can make the joke more engaging.\n",
-      "Joke: Why did the baby duck bring a backpack to the pond? Because it wanted to quack open some books!\u001b[0m\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Given the fields `query`, produce the fields `joke`.\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Follow the following format.\n",
-      "\n",
-      "Query: ${query}\n",
-      "Reasoning: Let's think step by step in order to ${produce the joke}. We ...\n",
-      "Joke: ${joke}\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to Reasoning: Let's think step by step in order to produce the joke. We know that baby animals are often seen as cute and endearing, so a joke involving them should play on their innocence and charm. Additionally, using a common scenario or play on words can make the joke more relatable and funny.\n",
-      "Joke: Why did the baby lion always get lost? Because he couldn't stop \"lion\" around!\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to Query: jokes about baby animals Reasoning: Let's think step by step in order to produce the joke. We should consider a common characteristic or behavior of baby animals that can be humorously exaggerated or word-play that is easy to understand.\n",
-      "Joke: Why did the baby elephant bring a suitcase to the zoo? Because it wanted to pack its trunk!\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to Query: jokes about baby animals Reasoning: Let's think step by step in order to produce the joke. We can start by considering characteristics or behaviors of baby animals that are endearing or amusing. For example, baby animals are often cute, clumsy, curious, and have unique names that can be used cleverly in wordplay. By combining these traits, we can create a lighthearted and funny joke.\n",
-      "Joke: Why did the baby kangaroo get in trouble at school? Because he couldn't stop jumping to conclusions!\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to Query: jokes about baby animals Reasoning: Let's think step by step in order to produce the joke. We need to consider the characteristics and behaviors of baby animals that might be endearing or funny. Baby animals are often associated with cuteness, innocence, clumsiness, and playful antics. We can play on these traits to create a humorous scenario or a witty remark.\n",
-      "Joke: Why don't baby ducks tell jokes? Because they always crack up!\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Query: jokes about baby animals\n",
-      "Reasoning: Let's think step by step in order to\u001b[32m produce the joke. Baby animals are often adorable and exhibit behaviors that can be amusing and endearing. To create a joke, we can focus on a specific baby animal and use a play on words or a humorous scenario that highlights these qualities.\n",
-      "\n",
-      "Joke: Why did the baby giraffe bring a ladder to school? Because it wanted to reach new heights!\u001b[0m\n",
-      "\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "llm.inspect_history(n=5)"
+    "llm.inspect_history(n=1)"
    ]
   },
   {
