start on "truly get it" example with context
need to solve for multiple generations during feedback...or pass count as argument to be 1 during the feedback mode...

--- a/examples/truly_get_it/truly_get_it.ipynb
+++ b/examples/truly_get_it/truly_get_it.ipynb
@@ -25,7 +25,7 @@
     "import os\n",
     "import dotenv\n",
     "import wget\n",
-    "import requests\n"
+    "import requests"
    ]
   },
   {
@@ -99,6 +99,7 @@
     "    context = dspy.InputField(description=\"this is the context of the query. study it carefully.\")\n",
     "    rationale = dspy.OutputField(description=\"this is your rationale for your response.\")\n",
     "    response = dspy.OutputField(description=\"this is your response.\")\n",
+    "    history = dspy.InputField(required=False, description=\"this is the history of the conversation with the user. use it to improve your next response.\")\n",
     "\n",
     "#module \n",
     "class VisualizerModule(dspy.Module):\n",
@@ -117,6 +118,68 @@
     "\n",
     "response = visualizer(query=query, context=context)\n",
     "display(response)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "here, we are going to calculate the `score` to be the reciprocal of the number of attempts to achieve a 5 star review. for all responses with less than 5 stars, the score is 0. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_user_rating(joke):\n",
+    "    while True:\n",
+    "        try:\n",
+    "            rating = int(input(f\"{joke}\\n---\\nPlease rate on a 5-point scale (1-5): \"))\n",
+    "            if 1 <= rating <= 5:\n",
+    "                return rating  # Cast the integer to a string before returning\n",
+    "            else:\n",
+    "                print(\"Invalid input. Please enter a number between 1 and 5.\")\n",
+    "        except ValueError:\n",
+    "            print(\"Invalid input. Please enter a number.\")\n",
+    "\n",
+    "def get_user_feedback(joke):\n",
+    "    feedback = input(f\"{joke}\\n---\\nPlease provide your feedback: \")\n",
+    "    return feedback\n",
+    "\n",
+    "def get_score(attempts, rating):\n",
+    "    if rating >= 5:\n",
+    "        score = 1/attempts\n",
+    "    else:\n",
+    "        score = 0\n",
+    "    print(\"calculated score: \" + str(score) + \" based on rating: \" + str(rating) + \" and attempts: \" + str(attempts))\n",
+    "    return score\n",
+    "\n",
+    "history = []\n",
+    "\n",
+    "# Get rating and feedback for each response\n",
+    "for response in response.completions:\n",
+    "    while True:\n",
+    "        print(response)\n",
+    "        rating = get_user_rating(response)\n",
+    "        feedback = get_user_feedback(response)\n",
+    "        this_example = {\n",
+    "            'query': query,\n",
+    "            #'context': context, #this is omitted for clarity, but might be useful to include if the context were not static. (ie, RAG)\n",
+    "            'rationale': response.rationale,\n",
+    "            'response': response,\n",
+    "            'rating': rating,\n",
+    "            'feedback': feedback\n",
+    "        }\n",
+    "        history.append(this_example)\n",
+    "        if rating >= 5:\n",
+    "            print(\"history:\")\n",
+    "            print(history)\n",
+    "            break\n",
+    "        history_str = ' '.join(str(item) for item in history)  # Convert each item to string before joining\n",
+    "        attempt_count += 1\n",
+    "\n"
    ]
   }
  ],
