--- a/examples/truly_get_it/truly_get_it.ipynb
+++ b/examples/truly_get_it/truly_get_it.ipynb
@@ -55,7 +55,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "we can use multiple generations (`count`) to speed up the process. "
+    "we can use multiple generations (`count`) to speed up the process. \n",
+    "todo: first get it working with count = 1, then figure out how to reconcile multiple generations with multiple attempts."
    ]
   },
   {
@@ -133,10 +134,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_user_rating(joke):\n",
+    "def get_user_rating(response):\n",
     "    while True:\n",
     "        try:\n",
-    "            rating = int(input(f\"{joke}\\n---\\nPlease rate on a 5-point scale (1-5): \"))\n",
+    "            rating = int(input(f\"{response}\\n---\\nPlease rate on a 5-point scale (1-5): \"))\n",
     "            if 1 <= rating <= 5:\n",
     "                return rating  # Cast the integer to a string before returning\n",
     "            else:\n",
@@ -144,8 +145,8 @@
     "        except ValueError:\n",
     "            print(\"Invalid input. Please enter a number.\")\n",
     "\n",
-    "def get_user_feedback(joke):\n",
-    "    feedback = input(f\"{joke}\\n---\\nPlease provide your feedback: \")\n",
+    "def get_user_feedback(response):\n",
+    "    feedback = input(f\"{response}\\n---\\nPlease provide your feedback: \")\n",
     "    return feedback\n",
     "\n",
     "def get_score(attempts, rating):\n",
