--- a/examples/MMLU-Pro/mmlu-pro.ipynb
+++ b/examples/MMLU-Pro/mmlu-pro.ipynb
@@ -472,6 +472,13 @@
     "\n",
     "kind of like - are people that are really good at taking tests actually useful? are bots that are really good at benchmarks useful?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "proper optimizer copro / mipro, work up to using the full 70 in the validation set"
+   ]
   }
  ],
  "metadata": {
