this is worse too

--- a/examples/brand_voice/brand_voice.ipynb
+++ b/examples/brand_voice/brand_voice.ipynb
@@ -665,16 +665,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "test the bootstrapfewshot"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Prediction(\n",
-       "    response=[\"This is the response to the user's query. Always use the brand voice.\\n\\n---\\n\\nCOR Black is revolutionizing automotive manufacturing with its unparalleled impact resistance and durability. 🚗🔧 Engineers now trust polySpectra's rugged photopolymer resins for parts that endure the toughest conditions. #MakeItReal #3DPrinting #Innovation #Automotive\\n\\n---\", \"🚗💪 Elevate your automotive manufacturing game with #CORBlack! Engineered for superior impact resistance and durability, COR Black is the ultimate resin for high-performance, end-use automotive parts. #MakeItReal with polySpectra's rugged photopolymer resins. #3DPrinting #AutomotiveInnovation #AdditiveManufacturing\", '🚗🔧 Dive into the future of automotive manufacturing with COR Black! Our rugged, impact-resistant photopolymer resin ensures every 3D printed component can withstand the toughest conditions. Make it real with polySpectra. 💪 #3DPrinting #AutomotiveInnovation #CORBlack #MakeItReal', '🚗✨ Exciting news! 🚀 COR Black is revolutionizing automotive manufacturing with its unparalleled impact resistance and durability. Say goodbye to brittle parts and hello to components that can withstand the toughest conditions. #3DPrinting #AutomotiveInnovation #MakeItReal #polySpectra', '🚗 Accelerate your automotive manufacturing with COR Black! Engineered for exceptional impact resistance and durability, COR Black ensures your 3D printed components can withstand the toughest conditions. Drive innovation with the most rugged photopolymer resin on the market. #MakeItReal #3DPrinting #AutomotiveInnovation']\n",
-       ")"
+       "[\"🚗💥 Revolutionizing automotive manufacturing with polySpectra's COR Black! Engineered for unparalleled strength and impact resistance, our rugged photopolymer resin drives innovation and durability in every component. #MakeItReal #3DPrinting #AutomotiveInnovation #CORBlack\",\n",
+       " \"This is the response to the user's query. Always use the brand voice.\\n\\n---\\n\\n🚗🔩 Revolutionizing automotive manufacturing with COR Black! Our impact-resistant, high-performance resin ensures durable, precision-engineered components that withstand the toughest conditions. Say goodbye to brittle parts and hello to the future of automotive innovation. #3DPrinting #Manufacturing #MakeItReal\\n\\n---\",\n",
+       " \"This is the response to the user's query. Always use the brand voice.\\n\\n---\\n\\n🚗🔧 Exciting news from the automotive world! COR Black is revolutionizing car manufacturing with its unparalleled impact resistance and durability. Say goodbye to brittle parts and hello to stronger, longer-lasting components. #MakeItReal #RuggedResins #3DPrinting #AutomotiveInnovation\\n\\n---\",\n",
+       " \"This is the response to the user's query. Always use the brand voice.\\n\\n---\\n\\n🚗🔧 Rev up your engines! COR Black is revolutionizing automotive manufacturing with unmatched strength and durability. Perfect for high-performance parts that withstand the toughest conditions. #3DPrinting #AutomotiveInnovation #MakeItReal 🌟\\n\\n---\",\n",
+       " '🚗 Transform your automotive manufacturing with COR Black! Our impact-resistant, heat/fluid-resistant resin is engineered to withstand the toughest conditions. Say goodbye to brittle parts and hello to unparalleled durability. #MakeItReal #CORBlack #3DPrinting #AutomotiveInnovation 🛠️✨']"
       ]
      },
      "metadata": {},
@@ -682,8 +691,31 @@
     }
    ],
    "source": [
-    "test5_now = compiled(test5_query, context, num_generations=5)\n",
-    "display(test5_now)"
+    "test5_now = compiled.forward(str(test5_query + \"...\"), context, num_generations=5)\n",
+    "display(test5_now.response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "these responses are unambiguously worse, why? inspect the history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm.inspect_history(n=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "it looks like the prompt is getting flooded with the long context"
    ]
   }
  ],
