wrong package name, oops => dspy-ai

--- a/examples/brand_voice/brand_voice.ipynb
+++ b/examples/brand_voice/brand_voice.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install dspy\n",
+    "%pip install dspy-ai\n",
     "%pip install ipywidgets\n",
     "%pip install IPython\n",
     "%pip install requests\n",
