--- a/examples/sense_of_humor/sense_of_humor.ipynb
+++ b/examples/sense_of_humor/sense_of_humor.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "#you need to install these\n",
-    "%pip install dspy\n",
+    "%pip install dspy-ai\n",
     "%pip install ipywidgets\n",
     "%pip install IPython"
    ]
